# gnuitar-0.3.2

./: AUTHORS  ChangeLog  FAQ  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  configure  configure.in  gnuitar.dsp  gnuitar.mak  gnuitar.sln  gnuitar.spec  gnuitar.vcproj  mkinstalldirs
docs/: Makefile  faq.html  index.html  install.html  readme.html  toc.sh
src/: Makefile  Makefile.am  Makefile.in  autowah.c  autowah.h  backbuf.c  backbuf.h  biquad.c  biquad.h  chebyshev.c  chebyshev.h  chorus.c  chorus.h  delay.c  delay.h  distort.c  distort.h  distort2.c  distort2.h  echo.c  echo.h  eqbank.c  eqbank.h  gnuitar.rc  gnuitar.xpm  gui.c  gui.h  main.c  noise.c  noise.h  phasor.c  phasor.h  pump.c  pump.h  rcfilter.c  rcfilter.h  resource.h  reverb.c  reverb.h  sustain.c  (+9 more)
